[gd_scene load_steps=2 format=3 uid="uid://bj8xk7qxqvyqp"]

[ext_resource type="Script" path="res://scripts/GameplayTest.gd" id="1_0hdqp"]

[node name="GameplayTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0hdqp")

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="UI"]
layout_mode = 2
text = "Deckport Gameplay System Test"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 2
text = "Disconnected"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="Buttons" type="GridContainer" parent="UI"]
layout_mode = 2
columns = 3

[node name="ConnectButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "Connect"

[node name="CreateMatchButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "Create Match"

[node name="JoinQueueButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "Join Queue"

[node name="LeaveQueueButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "Leave Queue"

[node name="PlayCardButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "Play Card"

[node name="AdvancePhaseButton" type="Button" parent="UI/Buttons"]
layout_mode = 2
text = "Advance Phase"

[node name="HSeparator2" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="Instructions" type="Label" parent="UI"]
layout_mode = 2
text = "Keyboard Shortcuts: 1=Connect, 2=Create Match, 3=Join Queue, 4=Play Card, 5=Advance Phase
Q/W/E=Simulate Card Scan, R=Request State Sync"
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="LogText" type="RichTextLabel" parent="UI"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
